# index-tts-api

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cpu  Dockerfile1  README.md  docker-compose.cpu.yml  docker-compose.yml  docker-compose_debug.yml  docker-compose_main.yml  indextts2_voxta_provider.json  preload_webui.py  pyproject.toml  requirements-lock.txt  requirements-no-numba.txt  requirements.txt  soxr_test.py  start.sh  start_api.sh  start_webui.sh  temp-reqs.txt  webui.py
.github/workflows/: ci-windows-py311.yml  ci-windows-setup-cpu.yml  sync.yml
docs/: README_zh.md
fastapi_app/: .env  README.md  __init__.py  main.py  main.py.bak  main_flow.md  requirements.txt  start.sh  start_all.ps1  start_api.ps1  start_api.sh  start_webui.ps1  start_webui.sh  websocket_manager.py
indextts/utils/: front.py
scripts/: setup_venv_py311.ps1
tools/i18n/: scan_i18n.py
